key pair from ftp